Formatted ui code.  Format changes ONLY