@@ -42,59 +42,48 @@ import org.hyperic.hq.ui.util.SessionUtils;
 import org.hyperic.util.config.ConfigResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 
-public class PrepareAction extends BaseAction {
+public class PrepareAction
+    extends BaseAction {
 
     private AuthzBoss authzBoss;
-    
+
     @Autowired
     public PrepareAction(AuthzBoss authzBoss) {
         super();
         this.authzBoss = authzBoss;
     }
 
-
     /**
      * @param mapping The ActionMapping used to select this instance
      * @param form The optional ActionForm bean for this request (if any)
      * @param request The HTTP request we are processing
      * @param response The HTTP response we are creating
-     *
-     * @exception Exception if the application business logic throws
-     *  an exception
+     * 
+     * @exception Exception if the application business logic throws an
+     *            exception
      */
-    public ActionForward execute(ActionMapping mapping,
-                                 ActionForm form,
-                                 HttpServletRequest request,
-                                 HttpServletResponse response)
-        throws Exception {
+    public ActionForward execute(ActionMapping mapping, ActionForm form, HttpServletRequest request,
+                                 HttpServletResponse response) throws Exception {
 
         PropertiesForm pForm = (PropertiesForm) form;
 
         HttpSession session = request.getSession();
         WebUser user = SessionUtils.getWebUser(session);
-      
-        DashboardConfig dashConfig = DashboardUtils.findDashboard(
-        		(Integer)session.getAttribute(Constants.SELECTED_DASHBOARD_ID),
-        		user, authzBoss);
+
+        DashboardConfig dashConfig = DashboardUtils.findDashboard((Integer) session
+            .getAttribute(Constants.SELECTED_DASHBOARD_ID), user, authzBoss);
         ConfigResponse dashPrefs = dashConfig.getConfig();
-        
-        Integer lastCompleted = new Integer(
-        		dashPrefs.getValue(".dashContent.controlActions.lastCompleted"));
-        Integer mostFrequent = new Integer(
-        		dashPrefs.getValue(".dashContent.controlActions.mostFrequent"));
-        Integer nextScheduled = new Integer(
-        		dashPrefs.getValue(".dashContent.controlActions.nextScheduled"));
-        boolean useLastCompleted = Boolean.valueOf(dashPrefs.
-        		getValue(".dashContent.controlActions.useLastCompleted")).
-            booleanValue();
-        boolean useMostFrequent = Boolean.valueOf(dashPrefs.
-        		getValue(".dashContent.controlActions.useMostFrequent")).
-            booleanValue();
-        boolean useNextScheduled = Boolean.valueOf(dashPrefs.
-        		getValue(".dashContent.controlActions.useNextScheduled")).
-            booleanValue();
-        long past = Long.parseLong(
-        		dashPrefs.getValue(".dashContent.controlActions.past"));
+
+        Integer lastCompleted = new Integer(dashPrefs.getValue(".dashContent.controlActions.lastCompleted"));
+        Integer mostFrequent = new Integer(dashPrefs.getValue(".dashContent.controlActions.mostFrequent"));
+        Integer nextScheduled = new Integer(dashPrefs.getValue(".dashContent.controlActions.nextScheduled"));
+        boolean useLastCompleted = Boolean.valueOf(dashPrefs.getValue(".dashContent.controlActions.useLastCompleted"))
+            .booleanValue();
+        boolean useMostFrequent = Boolean.valueOf(dashPrefs.getValue(".dashContent.controlActions.useMostFrequent"))
+            .booleanValue();
+        boolean useNextScheduled = Boolean.valueOf(dashPrefs.getValue(".dashContent.controlActions.useNextScheduled"))
+            .booleanValue();
+        long past = Long.parseLong(dashPrefs.getValue(".dashContent.controlActions.past"));
 
         pForm.setLastCompleted(lastCompleted);
         pForm.setMostFrequent(mostFrequent);
@@ -104,6 +93,6 @@ public class PrepareAction extends BaseAction {
         pForm.setUseNextScheduled(useNextScheduled);
         pForm.setPast(past);
 
-        return null;        
+        return null;
     }
 }
